Adding docs and removing another version features